# kaggle-setup

./: config.py  dataloading.py  pyproject.toml  setup.sh
