[tool.poetry]
name = "kaggle-setup"
version = "0.1.0"
description = ""
authors = ["Felix Neumann <hello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
wandb = "^0.16.2"
torch = "^2.1.2"
torchvision = "^0.16.2"
numpy = "^1.26.3"
pandas = "^2.2.0"
pytorch-lightning = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
